--- a/src/components/Projects/Projects.style.css
+++ b/src/components/Projects/Projects.style.css
@@ -19,6 +19,7 @@
   flex-direction: column;
   -webkit-box-align: center;
   align-items: center;
+  margin-bottom: var(--big_margin);
 }
 
 .other_noteworthy h4 {
@@ -41,6 +42,6 @@
   margin: 50px 0px 0px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 15px;
+  gap: var(--medium);
   position: relative;
 }
