--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
   --large: 20px;
   --xLarge: 24px;
   --huge: 30px;
+  --inbetween: 72px;
   --header: 82px;
   --humangos: 100px;
   --biggest: 150px;
