--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,11 @@
   --large: 20px;
   --xLarge: 24px;
   --huge: 30px;
-  --inbetween: 72px;
+  --inbetween: 62px;
   --header: 82px;
   --humangos: 100px;
   --biggest: 150px;
+  --almost_most: 160px;
   --mostest: 250px;
 
   /* SIZES */
