finished contact css

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@
   --large_margin: 12px;
   --big_margin: 22px;
   --huge_margin: 32px;
+  --biggest_margin: 42px;
 
   /* PADDING */
   --small_padding: 5px;
