--- a/src/components/Contact/Contact.style.css
+++ b/src/components/Contact/Contact.style.css
@@ -15,15 +15,14 @@
 .contact_content h3 {
   color: var(--primary_color);
   font-size: var(--inbetween);
-  margin-bottom: var(--big_margin);
+  margin-bottom: var(--small_margin);
 }
 .contact_content p {
   width: var(--inbetween_size);
-
   color: var(--primary_faded);
   font-size: var(--medium);
   text-align: center;
-  margin-bottom: var(--big_margin);
+  margin-bottom: var(--biggest_margin);
 }
 .contact_content button {
   margin-bottom: var(--big_margin);
@@ -34,6 +33,9 @@
   align-items: center;
   margin-top: var(--almost_most);
   margin-bottom: var(--medium_margin);
+}
+.contact_footer:hover {
+  transform: translateY(-5px);
 }
 .contact_footer .footer_link a {
   color: var(--primary_color);
