--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   /* COLORS */
   --background_color: #0a192f;
   --text_background_color: #112240;
-  --primary_color: #ccd6f6;
+  --primary_color: #dae3ff;
   --secondary_color: #5ff4d2;
   --primary_faded: #ccd6f68f;
   --white: #ffffff;
@@ -73,4 +73,8 @@ button {
 }
 button:hover {
   cursor: pointer;
+}
+
+.section {
+  margin: 0 300px;
 }
