--- a/src/components/Contact/Contact.style.css
+++ b/src/components/Contact/Contact.style.css
@@ -43,12 +43,14 @@
   transition: all 320ms ease-in-out;
 }
 .contact_footer .footer_link a p {
+  margin-bottom: 5px;
   font-size: var(--tiny);
   font-family: "Inconsolata", monospace;
 }
 .contact_footer .footer_link a span img {
   transition: all 320ms ease-in-out;
   width: var(--tiny);
+  margin-left: var(--mini);
   filter: brightness(0) saturate(100%) invert(98%) sepia(18%) saturate(5131%)
     hue-rotate(178deg) brightness(100%) contrast(93%);
 }
