fixed header css, changed projects order

--- a/src/components/Header/Header.style.css
+++ b/src/components/Header/Header.style.css
@@ -49,7 +49,7 @@
   content: "";
   display: block;
   width: 1px;
-  height: 90px;
+  height: var(--biggest);
   margin: 0px auto;
   background-color: var(--primary_faded);
 }
@@ -82,7 +82,7 @@
   content: "";
   display: block;
   width: 1px;
-  height: 90px;
+  height: var(--biggest);
   margin: 0px auto;
   background-color: var(--primary_faded);
 }
