--- a/src/components/Experience/Experience.style.css
+++ b/src/components/Experience/Experience.style.css
@@ -56,6 +56,7 @@
   color: var(--primary_color);
 }
 .right_description h4 {
+  font-family: "Inconsolata", "sans-serif";
   font-size: var(--small);
   font-weight: 400;
   color: var(--primary_faded);
@@ -79,8 +80,7 @@
   font-style: italic;
 }
 .right_description .work_header::before {
-  content: "@ ";
+  content: "@";
   color: var(--secondary_color);
   font-weight: 500;
-  font-style: italic;
 }
