--- a/src/components/Header/Header.style.css
+++ b/src/components/Header/Header.style.css
@@ -128,6 +128,9 @@
   transition: all 0.35s cubic-bezier(0.79, 0.33, 0.14, 0.53);
 }
 
+/* MEDIA QUERIES ---------------------------------------------*/
+
+
 @media (max-width: 575px) {
   #main {
     margin: 0 50px;
@@ -138,9 +141,15 @@
   .right {
     opacity: 0;
   }
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
   .header h1 {
     font-size: var(--header);
-    line-height: 50px;
+    line-height: 60px;
     text-align: center;
   }
   .header .bottom_header {
@@ -151,6 +160,6 @@
     text-align: center;
   }
   .header_btn {
-    margin-left: 35%;
+    font-size: var(--medium);
   }
 }
