--- a/src/components/About/About.style.css
+++ b/src/components/About/About.style.css
@@ -105,10 +105,7 @@
 /* MEDIA QUERIES ---------------------------------------------*/
 
 @media (max-width: 575px) {
-  #about {
-    margin: 0 10px;
-  }
-  .content {
+  #about .content {
     flex-direction: column;
     width: var(--full_size);
   }
@@ -120,7 +117,7 @@
   }
   .paragraph p {
     text-align: center;
-    margin: 15px 15px 0 0;
+    margin: var(--big_margin);
     font-size: var(--medium);
   }
   .paragraph ul {
